crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__second__multiple__specifier__specifier.snap
---
source: crates/tools/cron/src/tests/unit/second.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    ",1",
                    '-',
                ),
                Nom(
                    "1,1",
                    Alt,
                ),
            ],
        },
    ),
)
